--- a/src/index.html
+++ b/src/index.html
@@ -2,17 +2,65 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#06bcee" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="theme-color"
+      media="(prefers-color-scheme: light)"
+      content="#61dafb"
+    />
+    <meta
+      name="theme-color"
+      media="(prefers-color-scheme: dark)"
+      content="#282c34"
+    />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="#06bcee" />
-    <meta name="msapplication-TileImage" href="manifest-icon-512.png" />
-    <meta name="msapplication-TileColor" content="#06bcee" />
-    <link rel="manifest" href="/manifest.json" />
-    <link rel="icon" type="image/svg" href="./logo.svg" />
-    <link rel="mask-icon" href="manifest-icon-512.png" color="#06bcee" />
-    <link rel="apple-touch-icon" href="manifest-icon-512.png" />
+    <!-- <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" /> -->
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="#61dafb"
+      media="(prefers-color-scheme: light)"
+    />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="#282c34"
+      media="(prefers-color-scheme: dark)"
+    />
+    <meta name="apple-mobile-web-app-title" content="React App" />
+    <meta name="msapplication-TileImage" content="./assets/logo_x512.png" />
+    <!-- <meta name="msapplication-TileColor" content="#ffffff" /> -->
+    <meta
+      name="msapplication-TileColor"
+      content="#61dafb"
+      media="(prefers-color-scheme: light)"
+    />
+    <meta
+      name="msapplication-TileColor"
+      content="#282c34"
+      media="(prefers-color-scheme: dark)"
+    />
+    <meta name="msapplication-tap-highlight" content="no" />
+    <!-- Search Engine -->
+    <meta name="title" content="DhammaChakka" />
+    <meta
+      name="description"
+      content="Early Buddhist texts from the Tipitaka (Tripitaka). Suttas (sutras) with the Buddha's teachings on mindfulness, insight, wisdom, and meditation."
+    />
+    <meta
+      name="image"
+      content="https://sarbanandabhikkhu.github.io/React-Examples/assets/tablet.png"
+    />
+    <meta
+      name="keywords"
+      content="Buddha, Buddhism, Buddhist, sutta, suttas, sutra, sutras, tipitaka, tripitaka, wisdom, teaching, mindfulness, meditation, scripture, canon, Pali, Sanskrit, Tibetan, Chinese, insight, vipassana"
+    />
+
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.ico" />
+    <link rel="apple-touch-icon" href="./assets/logo192.png" />
+    <link rel="mask-icon" href="./assets/logo512.png" color="#282c34" />
+    <link rel="manifest" href="./manifest.json" />
+
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body></body>
